<?xml version="1.0" encoding="utf-8"?><!--
  Copyright 2017 Zhihu Inc.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/nav_color"
        android:elevation="4dp"
        app:navigationIconTint="@color/nav_icon_color"
        android:theme="?toolbar"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/selected_album"
            android:layout_width="wrap_content"
            android:layout_height="?actionBarSize"
            android:foreground="?selectableItemBackground"
            android:gravity="center"
            android:textColor="@color/nav_text_color"
            android:textSize="20sp" />


        <Button
            android:id="@+id/tv_canceledit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/button_bg_color_selector"
            android:text="@string/fm_cancel"
            android:layout_marginLeft="0dp"
            android:textSize="14sp"
            android:layout_gravity="right"
            android:textAllCaps="false"
            android:drawableLeft="@drawable/ic_wx_canceledit"
            android:drawableTint="@color/nav_icon_color"
            android:textColor="@color/nav_text_color"
            android:visibility="gone"/>
<!--        android:drawableLeft="@drawable/ic_wx_selectall_un"-->
        <Button
            android:id="@+id/tv_allSelect"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@drawable/button_bg_color_selector"
            android:text=""
            android:layout_marginRight="0dp"
            android:textAllCaps="false"
            android:textSize="14sp"
            android:layout_gravity="right"

            android:textColor="@color/dracula_capture"/>




    </androidx.appcompat.widget.Toolbar>

    <FrameLayout
        android:id="@+id/ll_oper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:visibility="gone"
        android:elevation="4dp"
        tools:targetApi="lollipop">
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="52dp"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <FrameLayout
                android:id="@+id/fl_copy"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                >
<!--                android:background="@drawable/button_bg_color_selector"-->
                <Button
                    android:id="@+id/tv_copy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:text="@string/fm_copyto"
                    android:textAllCaps="false"
                    android:drawableTop="@drawable/ic_fm_copy"
                    android:textColor="@color/colorZT33"
                    android:background="@drawable/button_bg_color_selector"
                    android:paddingTop="5dp"
                    android:gravity="center"
                    android:textSize="12sp"
                    />

                <TextView
                    android:id="@+id/tv_count"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|top"
                    android:layout_marginRight="10dp"
                    android:background="@drawable/badge"
                    android:gravity="center"
                    android:minWidth="9dp"
                    android:text="9"
                    android:textColor="@color/dracula_capture"
                    android:textSize="7sp"
                    android:visibility="gone" />
            </FrameLayout>
            <Button
                android:id="@+id/btn_fm_oper_move"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_moveto"
                android:text="@string/fm_moveto"
                android:paddingTop="5dp"
                android:gravity="center"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textColor="@color/colorZT33"
                android:background="@drawable/button_bg_color_selector"/>
            <Button
                android:id="@+id/btn_addpas"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_addpas"
                android:text="@string/fm_add_pass"
                android:paddingTop="5dp"
                android:gravity="center"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textColor="@color/colorZT33"
                android:background="@drawable/button_bg_color_selector"/>
            <Button
                android:id="@+id/tv_del"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_fm_del"
                android:text="@string/fm_del"
                android:paddingTop="5dp"
                android:gravity="center"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textColor="@color/colorZT33"
                android:background="@drawable/button_bg_color_selector"/>

            <Button
                android:id="@+id/btn_share"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_share"
                android:text="@string/fm_share"
                android:paddingTop="5dp"
                android:gravity="center"
                android:textSize="12sp"
                android:textAllCaps="false"
                android:textColor="@color/colorZT33"
                android:background="@drawable/button_bg_color_selector"/>



        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_oper1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

<!--            <Button-->
<!--                android:id="@+id/tv_del"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:background="@drawable/button_bg_color_selector"-->
<!--                android:text="@string/fm_del"-->
<!--                android:layout_marginLeft="10dp"-->
<!--                android:textSize="14sp"-->
<!--                android:drawableTop="@drawable/ic_wx_oper_del_w"-->
<!--                android:textColor="@color/dracula_capture"-->
<!--                 />-->





            <!--            <TextView-->
            <!--                android:id="@+id/tv_copy"-->
            <!--                android:layout_width="40dp"-->
            <!--                android:layout_height="30dp"-->
            <!--                android:layout_gravity="right"-->
            <!--                android:text=""-->
            <!--                android:paddingTop="8dp"-->
            <!--                android:layout_marginRight="10dp"-->
            <!--                android:textSize="8sp"-->
            <!--                android:drawableTop="@drawable/ic_wx_oper_copy_w"-->
            <!--                android:textColor="@color/dracula_capture"-->
            <!--                />-->

<!--            <TextView-->
<!--                android:id="@+id/tv_canceledit"-->
<!--                android:layout_width="40dp"-->
<!--                android:layout_height="50dp"-->
<!--                android:background="@drawable/button_bg_color_selector"-->
<!--                android:text="@string/fm_copytoU"-->
<!--                android:layout_marginLeft="10dp"-->
<!--                android:textSize="14sp"-->
<!--                android:drawableLeft="@drawable/ic_wx_canceledit"-->
<!--                android:textColor="@color/dracula_capture"-->
<!--                android:visibility="gone"/>-->


        </LinearLayout>


    </FrameLayout>

    <FrameLayout
        android:id="@+id/bottom_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="?attr/bottomToolbar.bg"
        android:elevation="4dp"
        android:visibility="gone"
        tools:targetApi="lollipop">

        <TextView
            android:id="@+id/button_preview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:foreground="?selectableItemBackground"
            android:padding="16dp"
            android:text="@string/button_preview"
            android:textColor="?attr/bottomToolbar.preview.textColor"
            android:textSize="16sp" />

        <LinearLayout
            android:padding="16dp"
            android:id="@+id/originalLayout"
            android:visibility="visible"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:foreground="?selectableItemBackground"
            android:layout_height="wrap_content"
            tools:showIn="@layout/activity_matisse">


            <com.zhihu.matisse.internal.ui.widget.CheckRadioView
                android:id="@+id/original"
                android:src="@drawable/ic_preview_radio_off"
                android:layout_gravity="center_vertical"
                android:layout_width="16dp"
                android:layout_height="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:enabled="true"
                android:paddingStart="4dp"
                android:paddingLeft="4dp"
                android:text="@string/button_original"
                android:textColor="?attr/bottomToolbar.preview.textColor"
                android:textSize="14sp" />

        </LinearLayout>


        <TextView
            android:id="@+id/button_apply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:foreground="?selectableItemBackground"
            android:padding="16dp"
            android:textColor="@color/nav_text_color"
            android:textSize="16sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_toolbar"
        android:layout_below="@id/toolbar"
        android:visibility="gone" />

    <FrameLayout
        android:id="@+id/empty_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_toolbar"
        android:layout_below="@id/toolbar"
        android:visibility="gone">

        <TextView
            android:id="@+id/empty_view_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:drawablePadding="8dp"
            android:drawableTop="?attr/album.emptyView"
            android:gravity="center"
            android:text="@string/empty_text"
            android:textColor="?attr/album.emptyView.textColor"
            android:textSize="16sp" />

    </FrameLayout>
</RelativeLayout>